<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_bottom"
        android:title="@string/bottom_menu_menu_name"
        android:icon="@drawable/growth" />

    <item android:id="@+id/calender_bottom"
        android:title="@string/bottom_menu_calendar_name"
        android:icon="@drawable/ic_calendar_24" />

    <item android:id="@+id/home_bottom"
        android:title="@string/bottom_menu_home_name"
        android:icon="@drawable/ic_home_24" />

    <item android:id="@+id/settings_bottom"
        android:title="@string/bottom_menu_settings_name"
        android:icon="@drawable/ic_settings_24"/>

    <item android:id="@+id/profile_bottom"
        android:title="@string/bottom_menu_profile_name"
        android:icon="@drawable/ic_person_24"/>


</menu>