<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/change_fragment_back"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/change_fragment_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_white_24"
            android:background="@android:color/transparent"/>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.gms.ads.AdView
        android:id="@+id/change_event_add"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        android:layout_below="@id/change_fragment_toolbar"/>

    <RelativeLayout
        android:id="@+id/line_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_event_add"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp">


        <TextView
            android:id="@+id/event_date_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/date_title_text"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/event_date_text"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#c7c7c7"
            android:text="15.07.2020"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/change_date_button"
            android:layout_toEndOf="@id/event_date_title_text"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/change_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_change_button"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>


    <TextView
        android:id="@+id/event_name_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_date"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/event_name_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/event_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/event_name_text_title"
        android:hint="@string/event_name_hint"
        android:maxLength="25"
        android:maxLines="1"
        android:textColorLink="@color/dark_gray_color"
        android:theme="@style/EditTextStyle"/>

    <TextView
        android:id="@+id/event_desc_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_description_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/event_name_edit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/event_desc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description_hint"
        android:layout_below="@id/event_desc_text_title"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:theme="@style/EditTextStyle"/>

    <RelativeLayout
        android:id="@+id/event_notify_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/event_desc_edit">

        <TextView
            android:id="@+id/event_notification_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/notification_title"
            android:layout_alignParentStart="true"/>

        <Switch
            android:id="@+id/event_notify_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:theme="@style/Switch_style" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/time_set_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_notify_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/event_time_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/event_time_text_title"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/event_time_text"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#c7c7c7"
            android:text="10:00"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/event_change_time_button"
            android:layout_toEndOf="@id/event_time_title_text"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/event_change_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/date_change_button"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/change_fragment_change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_event_button"
        android:layout_below="@id/time_set_line"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>



</RelativeLayout>