<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/add_plant_fragment_back"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_plant_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/add_fragment_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_arrow_back_white_24"/>

                <Button
                    android:id="@+id/add_fr_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:text="@string/add_fr_save_text"
                    android:textColor="@color/white"
                    android:layout_marginRight="5dp"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.gms.ads.AdView
            android:id="@+id/add_plant_my_garden_add"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/add_plant_fragment_toolbar"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/add_fr_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_below="@id/add_plant_my_garden_add"
            android:text="@string/add_fr_name_title"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/add_fr_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_below="@id/add_fr_name_title"
            android:hint="@string/add_fr_name_hint"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColorLink="@color/dark_gray_color"
            android:theme="@style/EditTextStyle"/>

        <TextView
            android:id="@+id/add_fr_desc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_below="@id/add_fr_name_text"
            android:text="@string/add_fr_desc_title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/add_fr_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_below="@id/add_fr_desc_title"
            android:hint="@string/add_fr_desc_hint"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColorLink="@color/dark_gray_color"
            android:theme="@style/EditTextStyle"/>

        <RelativeLayout
            android:id="@+id/add_fr_date_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/add_fr_desc_text">

            <TextView
                android:id="@+id/add_fr_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:text="@string/add_fr_date_title"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/add_fr_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:textColor="@color/dark_gray_color"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="01.01.2020"
                android:layout_toEndOf="@id/add_fr_date_title"
                android:layout_toStartOf="@id/add_fr_change_date_button"/>

            <Button
                android:id="@+id/add_fr_change_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:text="@string/add_fr_date_change"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:id="@+id/line_date_photo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray_color"
            android:layout_below="@id/add_fr_date_block"/>


       <RelativeLayout
           android:id="@+id/photo_block"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="5dp"
           android:layout_below="@id/line_date_photo">

           <TextView
               android:id="@+id/add_fr_photo_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="24sp"
               android:textColor="@color/black"
               android:text="@string/add_fr_photos_title"/>
           <TextView
               android:id="@+id/add_fr_photo_hint"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="14sp"
               android:textColor="@color/dark_gray_color"
               android:layout_below="@id/add_fr_photo_title"
               android:text="@string/add_fr_photos_hint"/>

           <ImageButton
               android:id="@+id/add_photo_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@android:color/transparent"
               android:layout_alignParentTop="true"
               android:layout_alignParentEnd="true"
               android:layout_marginTop="5dp"
               android:layout_marginEnd="5dp"
               android:src="@drawable/ic_baseline_add_24_green"/>

       </RelativeLayout>

        <GridView
            android:id="@+id/gridViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:columnWidth="100dp"
            android:layout_marginBottom="55dp"
            android:layout_below="@id/photo_block"
            />

    </RelativeLayout>

</LinearLayout>