<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/info_fragment_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/info_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            app:menu="@menu/info_event_menu">

            <ImageButton
                android:id="@+id/info_fragment_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_white_24"
                android:background="@android:color/transparent"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/info_fragment_event_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/info_fragment_toolbar"
            android:text="@string/event_name_text"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/info_fragment_event_name_text"
            android:layout_below="@id/info_fragment_event_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/dark_gray_color"
            android:text="@string/event_name_hint" />

        <TextView
            android:id="@+id/info_fragment_event_desc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_description_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/info_fragment_event_name_text"/>

        <TextView
            android:id="@+id/info_fragment_event_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_gray_color"
            android:textSize="20sp"
            android:text="@string/event_description_hint"
            android:layout_below="@id/info_fragment_event_desc_title"/>

        <RelativeLayout
            android:id="@+id/info_fragment_time_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_fragment_event_desc_text"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/info_fragment_event_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:text="@string/text_default_time_title"/>

            <TextView
                android:id="@+id/info_fragment_event_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/dark_gray_color"
                android:layout_alignParentEnd="true"
                android:text="10:00"/>


        </RelativeLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/event_info_add"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/info_fragment_time_block"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>